chore: update comment in yaml file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 # author: 
-#   name: Kevin Garcia
-#   email: kegadev@outlook.com
-#   url: www.kega.dev
+#   name:   Kevin Garcia
+#   email:  kegadev@outlook.com
+#   url:    https://kega.dev/
 
 
 name: circulito
