--- a/example/.gitignore
+++ b/example/.gitignore
@@ -22,29 +22,23 @@ migrate_working_dir/
 #.vscode/
 
 # Flutter/Dart/Pub related
-# Libraries should not include pubspec.lock, per https://dart.dev/guides/libraries/private-files#pubspeclock.
-/pubspec.lock
 **/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
 .packages
-build/
+.pub-cache/
+.pub/
+/build/
 
+# Symbolication related
+app.*.symbols
 
-# example/
+# Obfuscation related
+app.*.map.json
 
-# Except for main.dart in example/lib
-# !example/lib/main.dart
-
-
-
-# Example directories.
-example/macos/
-example/web/
-example/windows/
-example/linux/
-example/android/
-example/ios/
-
-
-
-# Exceptions to above rules.
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
