--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@
 
 
 name: circulito
-description: Circulito provides a simple circular wheel chart for visualizing data using percentages and colors.
-version: 0.3.2
+description: Circulito provides a simple circular wheel/donut chart for visualizing data using percentages and colors.
+version: 0.4.0
 homepage: https://github.com/kegadev/circulito
 
 
