--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@
 
 
 name: circulito
-description: Circulito provides a simple circular wheel/donut chart for visualizing data using percentages and colors.
-version: 0.8.0
+description: Circulito provides a highly customizable way to draw and animate circular wheel/donut/pie charts for visualizing data.
+version: 1.0.0
 homepage: https://github.com/kegadev/circulito
 
 
@@ -23,8 +23,6 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
