--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@
 
 name: circulito
 description: Circulito provides a highly customizable way to draw and animate circular wheel/donut/pie charts for visualizing data.
-version: 1.0.1
+version: 1.0.2
 homepage: https://github.com/kegadev/circulito
 
 
@@ -21,7 +21,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  lints: ^3.0.0
+
 
 
 # The following section is specific to Flutter packages.
